# practica-monitoreo-ambiental

./: .gitignore  DIAGRAM.md  DIAGRAM_RESUMEN.md  README.md  hosts.txt  hosts_12.txt  hosts_24.txt  hosts_36.txt  hosts_48.txt  pyproject.toml
benchmark/: CLUSTER_MPI.md  RESULTADOS_MPI.md  __init__.py  __main__.py  runner.py
gui/: __init__.py  __main__.py  estilo.py  ventana_principal.py  worker_mpi.py  worker_simulacion.py
monitoreo/: __init__.py  analizador.py  config.py  controlador.py  controlador_hilos.py  controlador_procesos.py  entorno.py  estacion.py  eventos.py  modelos.py
mpi_monitoreo/: README_GUI.md  __init__.py  consolidacion.py  controlador_mpi.py  eventos_json.py  metricas.py  practica_mpi.py
resultados/: ejecuciones.csv  entorno.csv  mpi.csv  resumen.csv
tests/: smoke_gui_mpi.py  test_construir_comando.py  test_eventos_json.py
