[project]
name = "practica-4"
version = "0.1.0"
description = "Sistema de monitoreo ambiental urbano con paralelismo basado en procesos e hilos"
readme = "README.md"
requires-python = ">=3.13"
# Sin dependencias externas: la GUI usa tkinter (stdlib) para poder correr
# en una build free-threading (sin GIL). PyQt6 no tiene wheel free-threaded
# y reactivaria el GIL, por eso se migro a tkinter.
dependencies = []

[tool.uv]
package = false

[tool.setuptools]
packages = ["benchmark", "gui", "monitoreo"]
